--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.18",
     "autoprefixer": "10.4.16",
-    "next": "14.0.4",
+    "next": "^13.4.12",
     "postcss": "8.4.32",
     "react": "18.2.0",
     "react-dom": "18.2.0",
